--- a/front_end/jurassic-park/public/index.html
+++ b/front_end/jurassic-park/public/index.html
@@ -7,6 +7,11 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/t-rex-apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/t-rex-favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/t-rex-favicon-16x16.png">
+    <link rel="manifest" href="/t-rex-site.webmanifest">
+    <link rel="icon" href="%PUBLIC_URL%/t-rex-favicon.ico" />
     <link rel="stylesheet" href="/css/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
