--- a/front_end/jurassic-park/public/index.html
+++ b/front_end/jurassic-park/public/index.html
@@ -33,6 +33,45 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!--Load the AJAX API-->
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script type="text/javascript">
+
+      // Load the Visualization API and the corechart package.
+      google.charts.load('current', {'packages':['corechart']});
+
+      // Set a callback to run when the Google Visualization API is loaded.
+      google.charts.setOnLoadCallback(drawChart);
+
+      // Callback that creates and populates a data table,
+      // instantiates the pie chart, passes in the data and
+      // draws it.
+      function drawChart() {
+
+        // Create the data table.
+        var data = new google.visualization.DataTable();
+        data.addColumn('string', 'Day');
+        data.addColumn('number', 'Visitors');
+        data.addRows([
+          ['Monday', 133],
+          ['Tuesday', 111],
+          ['Wednesday', 221],
+          ['Thursday', 261],
+          ['Friday', 357],
+          ['Saturday', 552],
+          ['Sunday', 352]
+        ]);
+
+        // Set chart options
+        var options = {'title':'Jurassic Park: Weekly Visitors',
+                       'width':400,
+                       'height':300};
+
+        // Instantiate and draw our chart, passing in some options.
+        var chart = new google.visualization.PieChart(document.getElementById('chart_div'));
+        chart.draw(data, options);
+      }
+    </script>
     <title>Jurassic Park</title>
   </head>
   <body>
