--- a/front_end/jurassic-park/public/index.html
+++ b/front_end/jurassic-park/public/index.html
@@ -37,38 +37,28 @@
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript">
 
-      // Load the Visualization API and the corechart package.
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script type="text/javascript">
       google.charts.load('current', {'packages':['corechart']});
-
-      // Set a callback to run when the Google Visualization API is loaded.
       google.charts.setOnLoadCallback(drawChart);
 
-      // Callback that creates and populates a data table,
-      // instantiates the pie chart, passes in the data and
-      // draws it.
       function drawChart() {
-
-        // Create the data table.
-        var data = new google.visualization.DataTable();
-        data.addColumn('string', 'Day');
-        data.addColumn('number', 'Visitors');
-        data.addRows([
-          ['Monday', 133],
-          ['Tuesday', 111],
-          ['Wednesday', 221],
-          ['Thursday', 261],
-          ['Friday', 357],
-          ['Saturday', 552],
-          ['Sunday', 352]
+        var data = google.visualization.arrayToDataTable([
+          ['Year', 'Ticket Sales', 'Revenue'],
+          ['2016',  11200,      51200],
+          ['2017',  11500,      70220],
+          ['2018',  11800,       75632],
+          ['2019',  21000,      85981]
         ]);
 
-        // Set chart options
-        var options = {'title':'Jurassic Park: Weekly Visitors',
-                       'width':400,
-                       'height':300};
+        var options = {
+          title: 'Jurassic Park: Yearly Financial Performace',
+          curveType: 'function',
+          legend: { position: 'bottom' }
+        };
 
-        // Instantiate and draw our chart, passing in some options.
-        var chart = new google.visualization.PieChart(document.getElementById('chart_div'));
+        var chart = new google.visualization.LineChart(document.getElementById('curve_chart'));
+
         chart.draw(data, options);
       }
     </script>
